# triangular-fx-arbitrage

./: .gitignore  LICENSE  README.md  pyproject.toml
notebooks/: research_report_v2.ipynb
reports/: summary_report.txt  wfo_summary_report.txt
scripts/: download_histdata.py  generate_report.py  generate_report_wfo.py  merge_histdata.py
src/fxarb/: __init__.py
src/fxarb/analysis/: __init__.py  cointegration.py  stationarity.py  strategy.py  triplets.py
src/fxarb/backtest/: __init__.py  engine.py  kelly.py  metrics.py  wfo.py
src/fxarb/data/: __init__.py  cleaning.py  features.py  loader.py
src/fxarb/models/: __init__.py  garch.py  kalman.py  ou_process.py  regime.py  zscore.py
src/fxarb/visualization/: __init__.py  interactive.py  performance.py  portable.py  spreads.py
tests/: __init__.py  test_analysis.py  test_data.py  test_models.py
